// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VDatePickerHeader.js should render component and match snapshot 1`] = `

<div class="v-date-picker-header theme--light">
  <button type="button"
          class="v-btn v-btn--icon theme--light"
  >
    <div class="v-btn__content">
      <i aria-hidden="true"
         class="v-icon material-icons theme--light"
      >
        chevron_left
      </i>
    </div>
  </button>
  <div class="v-date-picker-header__value">
    <strong class="accent--text">
      November 2005
    </strong>
  </div>
  <button type="button"
          class="v-btn v-btn--icon theme--light"
  >
    <div class="v-btn__content">
      <i aria-hidden="true"
         class="v-icon material-icons theme--light"
      >
        chevron_right
      </i>
    </div>
  </button>
</div>

`;

exports[`VDatePickerHeader.js should render component in RTL mode and match snapshot 1`] = `

<div class="v-date-picker-header theme--light">
  <button type="button"
          class="v-btn v-btn--icon theme--light"
  >
    <div class="v-btn__content">
      <i aria-hidden="true"
         class="v-icon material-icons theme--light"
      >
        chevron_right
      </i>
    </div>
  </button>
  <div class="v-date-picker-header__value">
    <strong class="accent--text">
      November 2005
    </strong>
  </div>
  <button type="button"
          class="v-btn v-btn--icon theme--light"
  >
    <div class="v-btn__content">
      <i aria-hidden="true"
         class="v-icon material-icons theme--light"
      >
        chevron_left
      </i>
    </div>
  </button>
</div>

`;

exports[`VDatePickerHeader.js should render component with default slot and match snapshot 1`] = `

<div class="v-date-picker-header theme--light">
  <button type="button"
          class="v-btn v-btn--icon theme--light"
  >
    <div class="v-btn__content">
      <i aria-hidden="true"
         class="v-icon material-icons theme--light"
      >
        chevron_left
      </i>
    </div>
  </button>
  <div class="v-date-picker-header__value">
    <strong class="accent--text">
      <span>
        foo
      </span>
    </strong>
  </div>
  <button type="button"
          class="v-btn v-btn--icon theme--light"
  >
    <div class="v-btn__content">
      <i aria-hidden="true"
         class="v-icon material-icons theme--light"
      >
        chevron_right
      </i>
    </div>
  </button>
</div>

`;
